--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -16,56 +8,22 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     services:
-      # Label used to access the service container
-      postgres:
-        # Docker Hub image
-        image: postgres
-        # Provide the password for postgres
-        env:
-          POSTGRES_PASSWORD: postgres
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
+          postgres:
+            image: postgres:latest
+            env:
+              POSTGRES_USER: postgresuser
+              POSTGRES_PASSWORD: mysecretpassword
+              POSTGRES_DB: postgres
+            ports:
+              - 5432:5432
+            options: >-
+              --health-cmd "pg_isready -U postgres"
+              --health-interval 10s
+              --health-timeout 5s
+              --health-retries 5
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
-        
-      - name: Connect to PostgreSQL
-        run: node client.js
-
-      - name: Install dependencies
-        run: npm ci
-
-
-
-
-
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      
-      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-  
-    env:
-      # The hostname used to communicate with the PostgreSQL service container
-      POSTGRES_HOST: postgres
-      # The default PostgreSQL port
-      POSTGRES_PORT: 5432
-
+    - uses: actions/checkout@v4
+    - uses: xyrsto/academy-fs/.github/actions/maven_build@main
+    - uses: xyrsto/academy-fs/.github/actions/docker_build@main
