--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
 
     - name: Build docker field
-      run : docker build . --file ./src/main/docker/Dockerfile.jvm --tag academy:$(date +%s)
+      run : docker build . --file academy/src/main/docker/Dockerfile.jvm --tag academy:$(date +%s)
 
     - uses: actions/checkout@v4
 
