--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,10 @@ jobs:
               --health-timeout 5s
               --health-retries 5
     steps:
-
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
     - name: Build docker field
-      run : docker build < --file academy/src/main/docker/Dockerfile.jvm --tag academy:$(date +%s)
+      run : docker build . --file academy/src/main/docker/Dockerfile.jvm --tag academy:$(date +%s)
 
     - uses: actions/checkout@v4
 
