--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,10 +24,19 @@ jobs:
               --health-timeout 5s
               --health-retries 5
     steps:
+    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
     - name: Build docker field
       run : docker build . --file academy/src/main/docker/Dockerfile.jvm --tag academy:$(date +%s)
 
-    - uses: actions/checkout@v4
 
