--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,17 +26,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - uses: Joao-21903149/academy/.github/actions/maven_build@main
+
+
+
 
     - name: Build docker field
       run : docker build . --file src/main/docker/Dockerfile.jvm --tag academy:$(date +%s)
+
+
+
 
 
