--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,12 +28,11 @@ jobs:
     - uses: actions/checkout@v4
 
     - uses: Joao-21903149/academy/.github/actions/maven_build@main
+    - uses: Joao-21903149/academy/.github/actions/docker_build@main
 
 
 
 
-    - name: Build docker field
-      run : docker build . --file src/main/docker/Dockerfile.jvm --tag academy:$(date +%s)
 
 
 
